--- a/_config.yml
+++ b/_config.yml
@@ -2,6 +2,7 @@
 menu:
   home: /
   categories: /categories
+  archives: /archives
   tags: /tags
   about: /about
 rss: /atom.xml
@@ -15,5 +16,5 @@ author: hiluluke
 # Set default keywords (Use a comma to separate)
 keywords: "hiluluke note 笔记 前端 技术 希鲁鲁克 javascript "
 
-description: "且歌且行"
+description: "我是一个粉刷匠"
 
