--- a/_config.yml
+++ b/_config.yml
@@ -9,7 +9,7 @@ rss: /atom.xml
 
 # Place your favicon.ico to /source directory.
 favicon: /favicon.ico
-avatar: /avatar.jpg
+avatar: /avatar.jpeg
 author: hiluluke
 
 # Set default keywords (Use a comma to separate)
