--- a/package.json
+++ b/package.json
@@ -7,5 +7,9 @@
     "url": "git+https://github.com/wszgxa/hexo-theme-simple.git"
   },
   "license": "MIT",
-  "homepage": "https://github.com/wszgxa/hexo-theme-simple#readme"
+  "homepage": "https://github.com/wszgxa/hexo-theme-simple#readme",
+  "devDependencies": {
+    "eslint": "^3.2.2",
+    "eslint-config-google": "^0.6.0"
+  }
 }
