--- a/_config.yml
+++ b/_config.yml
@@ -26,3 +26,5 @@ social:
   twitter: https://twitter.com/Hiluluke
   codepen: http://codepen.io/hiluluke
 
+duoshuo_shortname: hiluluke
+# disqus_shortname: hilus-note
