--- a/_config.yml
+++ b/_config.yml
@@ -26,3 +26,8 @@ social:
 
 duoshuo_shortname: hiluluke
 # disqus_shortname: hilus-note
+
+# baidu_analytics: 
+
+# tencent_analytics: 
+google_analytics: UA-83014983-1
