--- a/package.json
+++ b/package.json
@@ -1,13 +1,15 @@
 {
-  "name": "simple",
-  "version": "1.1.0",
-  "main": "index.js",
+  "name": "hexo-theme-simple",
+  "description": "A simple hexo theme",
+  "author": "hiluluke",
+  "version": "1.2.0",
   "repository": {
     "type": "git",
     "url": "git+https://github.com/wszgxa/hexo-theme-simple.git"
   },
   "scripts": {
     "dev": "gulp dev & gulp watch",
+    "eslint": "eslint source/js/simple.js",
     "build": "gulp build"
   },
   "license": "MIT",
